# ColorfulStringArtGenerator

./: CMakeLists.txt
include/: annealing_optimizer.h  array2d.h  color.h  constexpr_sqrt.h  img.h  img_color_quantizer.h  line.h  line_chen.h  logger.h  priority_queue.h  string_art_solver.h  string_color_solver.h  string_line.h  string_sequence.h  string_solver.h  thread_pool.h  thread_rng.h  vec.h
src/: color.cpp  img.cpp  img_color_quantizer.cpp  line.cpp  logger.cpp  main.cpp  string_art_solver.cpp  string_art_solver_builder.cpp  string_color_solver.cpp  string_line.cpp  string_solver.cpp  string_squence.cpp  thread_pool.cpp  thread_rng.cpp
